# ai_observability_tool

./: .gitignore  CREWAI_INTEGRATION.md  README.md  app.py  pyproject.toml  run_test.py  sample_data.py  test_app.py
core/: database.py  models.py
examples/: crewai_ehr_example.py  real_crewai_integration.py
integrations/: __init__.py  crewai_integration.py
ui/: analytics.py  config.py  dashboard.py  debug.py
