[project]
name = "ai-observability-tool"
version = "0.1.0"
description = "Local AI agent observability tool for monitoring, debugging, and analyzing AI agent interactions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "cryptography>=40.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "ui", "utils"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
